[project]
name = "mineru-api"
version = "0.1.0"
description = ""
authors = [
    { name="neka-nat", email="nekanat.stock@gmail.com" }
]
license = "AGPL-3.0"
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "magic-pdf[full]>=1.3.6",
    "hydra-core>=1.3.2",
    "uvicorn[standard]>=0.30.3",
    "torchtext>=0.18.0",
    "timm>=0.9.16,<0.10.0",
    "gotenberg-client>=0.6.0",
    "fastapi>=0.111.1",
    "fairscale>=0.4.13",
    "ftfy>=6.2.0",
    "decord==0.6.0",
    "webdataset==0.2.86",
    "torch==2.3.0",
    "numpy==1.26.4",
    "iopath>=0.1.7,<0.1.10",
    "modelscope==1.20.1",
]

[tool.uv]
prerelease = "allow"
